<resources>
    <string name="app_name" translatable="false">Pullsh</string>
    <string name="action_push_config">Push Config</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_restore">Restore</string>
    <string name="btn_confirm">Confirm</string>

    <string name="pref_control">Control</string>
    <string name="pref_appearance">Appearance</string>
    <string name="pref_click">Click on action button and trigger</string>
    <string name="click_push">Push</string>
    <string name="click_pull">Pull</string>
    <string name="click_nothing">Nothing</string>
    <string name="pref_reverse">Reverse swipe action</string>
    <string name="pref_swipe_default">Swipe left to push, swipe right to pull</string>
    <string name="pref_swipe_reverse">Swipe left to pull, swipe right to push</string>
    <string name="pref_copy_icon">Click the copy icon to</string>
    <string name="pref_copy_full">copy full path, e.g. %s</string>
    <string name="pref_copy_id">copy id only, e.g. %s</string>
    <string name="pref_copy_pull">Copy memo after pull</string>
    <string name="pref_night">Enable night mode</string>
    <string name="pref_memo_align">Align memo text</string>
    <string name="align_center">Center</string>
    <string name="align_left">Left</string>

    <string name="restore_alert_title">Restore settings</string>
    <string name="restore_alert_msg">Do you want to restore all the settings?</string>

    <string name="memo_create">Created on :   %s</string>
    <string name="memo_expire">Expire   on   :   %s</string>
    <string name="memo_allowance_user">Access left :  %d</string>
    <string name="memo_allowance_author">Access assigned :  %d</string>

    <string name="snackbar_delete">One memo removed</string>
    <string name="snackbar_undo">UNDO</string>
    <string name="copy">copy</string>
    <string name="swipe_left">swipe left</string>
    <string name="swipe_right">swipe right</string>

    <string name="shortcut_push_short">Push</string>
    <string name="shortcut_push_long">Create a push</string>

    <string name="shortcut_pull_short">Pull</string>
    <string name="shortcut_pull_long">Create a pull</string>

    <string name="bottom_sheet_memo_id">Memo id:</string>
    <string name="bottom_sheet_memo_created_by">This memo is created by push</string>

    <string name="dialog_push_memo_expire">Memo will be expired after</string>
    <string name="dialog_push_memo_expire_min">min</string>
    <string name="dialog_push_memo_expire_hr">hr</string>
    <string name="dialog_push_memo_expire_day">day</string>
    <string name="dialog_push_memo_after_checked">or after checked</string>
    <string name="dialog_push_memo_after_checked_times">times</string>

    <string name="input_area_hint_pull">Input the memo id</string>
    <string name="input_area_hint_push">Input your memo</string>
    <string name="input_area_create_a_pull">Create a pull</string>
    <string name="input_area_create_a_push">Create a push</string>

    <string name="toast_create_pull_failed">Create pull failed</string>
    <string name="toast_create_push_failed">Create push failed</string>
    <string name="toast_input_correct_id">Please input correct memo id</string>
    <string name="toast_input_correct_memo">Please input some contents</string>
    <string name="toast_memo_content_copied">Memo content copied to clipboard</string>
    <string name="toast_memo_id_copied">id copied to clipboard</string>
    <string name="toast_memo_link_copied">Share link copied to clipboard</string>
    <string name="toast_item_already_in_list">item already in list</string>
    <string name="toast_push_config_notice">Memo access control enabled.\nSwipe left to change push config.</string>
    <string name="toast_expired_notice">This memo has been expired</string>

    <string name="search_hint">Search id, content or note</string>

    <string name="btn_add_note">Add a note</string>
    <string name="note_header">Note:</string>
    <string name="note_hint">Add note to this memo, which is stored locally and eligible for search</string>

    <plurals
        name="toast_expire_notice">
        <item quantity="one">This memo will be expired within %d minute.</item>
        <item quantity="other">This memo will be expired within %d minutes.</item>
    </plurals>
</resources>
