<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_control" >
        <ListPreference
            android:key="pref_click"
            android:title="@string/pref_click"
            android:entries="@array/array_click"
            android:entryValues="@array/array_click_value"
            android:defaultValue="click_push"
            android:summary="@string/click_push"/>
        <SwitchPreference
            android:key="pref_reverse"
            android:title="@string/pref_reverse"
            android:defaultValue="false"
            android:summaryOff="@string/pref_swipe_default"
            android:summaryOn="@string/pref_swipe_reverse"/>
        <SwitchPreference
            android:key="pref_copy_icon"
            android:title="@string/pref_copy_icon"
            android:defaultValue="true" />
        <SwitchPreference
            android:key="pref_copy_pull"
            android:title="@string/pref_copy_pull"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_appearance" >

        <SwitchPreference
            android:key="pref_night"
            android:title="@string/pref_night"
            android:defaultValue="false" />

        <ListPreference
            android:key="pref_align"
            android:title="@string/pref_memo_align"
            android:entries="@array/array_align"
            android:entryValues="@array/array_align_value"
            android:defaultValue="align_center" />

    </PreferenceCategory>

</PreferenceScreen>