<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/dialog_push_memo_expire"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_expire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="1"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="25sp"
        tools:text="20"
        tools:ignore="HardcodedText" />

    <RadioGroup
        android:id="@+id/rg_expire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:checkedButton="@+id/rb_day"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:weightSum="4">

        <RadioButton
            android:id="@+id/rb_min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_push_memo_expire_min" />

        <RadioButton
            android:id="@+id/rb_hr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_push_memo_expire_hr" />

        <RadioButton
            android:id="@+id/rb_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_push_memo_expire_day" />

        <RadioButton
            android:id="@+id/rb_infi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="∞"
            tools:ignore="HardcodedText" />
    </RadioGroup>

    <SeekBar
        android:id="@+id/sb_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_allowance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:checked="true"/>

        <TextView
            android:id="@+id/tv_allowance_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/dialog_push_memo_after_checked"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_allowance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:maxEms="3"
            android:maxLength="3"
            android:text="20"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="25sp"
            tools:text="20"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tv_allowance_suf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/dialog_push_memo_after_checked_times"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>